<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splesh_screen_2"
    android:gravity="center"
    android:padding="8dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_students_licence"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/color_white"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="Username"
                android:drawableLeft="@drawable/ic_user"
                android:background="@null"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:maxLines="1"
                android:drawablePadding="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="Password"
                android:drawableLeft="@drawable/ic_lock"
                android:background="@null"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:drawablePadding="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_white" />
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/color_white"
            android:text="@string/button_text_login"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="24dp"/>

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot"
            android:textSize="18sp"
            android:textColor="@color/color_white"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>